Fix URLbar results spacing on Nova

--- a/natsumi/modules/nova-patches.css
+++ b/natsumi/modules/nova-patches.css
@@ -326,6 +326,11 @@ SOFTWARE.
 
   .urlbarView {
     margin-inline: 7px !important;
+    margin-block: 0 7px !important;
+  }
+
+  #urlbar-results {
+    padding-top: calc(7px - var(--space-xxsmall)) !important;
   }
 
   .urlbarView-row {
